<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#EF476F"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".CreateAccount">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/uFirstName"
        android:background="@drawable/login_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:padding="5dp"/>

    <EditText
        android:id="@+id/uLastName"
        android:background="@drawable/login_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:padding="5dp"/>

    <EditText
        android:id="@+id/uEmail"
        android:background="@drawable/login_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/email_login"
        android:inputType="textWebEmailAddress|textPersonName"
        android:padding="5dp"/>

    <EditText
        android:id="@+id/uPassword"
        android:background="@drawable/login_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName|textWebPassword"
        android:padding="5dp"/>

    <EditText
        android:id="@+id/uCardNum"
        android:background="@drawable/login_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Credit Card Number"
        android:inputType="number"
        android:padding="5dp"/>

    <EditText
        android:id="@+id/uExpDate"
        android:background="@drawable/login_edit_text"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:ems="10"
        android:hint="Exp. Date"
        android:inputType="textPersonName"
        android:padding="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_gravity="center_horizontal"
        android:text="hint: mm/yyyy"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>


    <EditText
        android:id="@+id/uCVV"
        android:background="@drawable/login_edit_text"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="CVV"
        android:inputType="number"
        android:padding="5dp"/>

    <Switch
        android:id="@+id/isVendor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/are_you_a_vendor"
        android:textColor="@android:color/white"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/vendorId"
        android:background="@drawable/login_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:hint="@string/vendor_id"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@drawable/register_button"
        android:text="@string/register"
        android:textColor="@android:color/white" />

</LinearLayout>