<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#073B4C"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QrScannerFragment">


    <ImageView
        android:layout_width="156dp"
        android:layout_height="144dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        app:srcCompat="@mipmap/ic_tabdab" />

    <EditText
        android:id="@+id/LogEmail"
        android:background="@drawable/login_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/email_login"
        android:inputType="textEmailAddress"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/LogPass"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_edit_text"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_pink_white_outline"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_pink_white_outline"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

</LinearLayout>
