<resources>
    <string name="app_name">TabDab</string>
    <string name="bill_view">Bill View</string>
    <string name="bill_view_header">Bill View</string>
    <string name="pay_button_text">Pay</string>
    <string name="pay_message">Payments currently not supported.</string>
    <string name="title_activity_scan_or_show">ScanOrShow</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="vendor_portion">Vendor Portion</string>
    <string name="customer_portion">Customer Portion</string>
    <string name="generate_bill_btn">Generate Bill</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="account">Account</string>
    <string name="name">Name</string>
    <string name="edit_info">Edit Info</string>
    <string name="change_password">Change Password</string>
    <string name="add_tip">Add Tip</string>
    <string name="tip">Tip</string>
    <string name="cont">Continue</string>
    <string name="account_created">Account Created</string>
    <string name="email">Email:</string>
    <string name="email_login">Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="scan_qr">Scan QR</string>
    <string name="generate_bill">Generate Bill</string>
    <string name="add_item">Add Item</string>
    <string name="price">Price</string>
    <string name="register">Register</string>
    <string name="are_you_a_vendor">Are you a vendor?:</string>
    <string name="vendor_id">Vendor ID</string>
    <string name="tabdab">TabDab</string>
    <string name="password">Password</string>
    <string name="register_vendor">Register Vendor</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="edit_account">Edit Account</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>
    <string name="qr_code">QR code</string>
    <string name="remove_menu_item">Remove menu item</string>
    <string name="invalid_user_error">Sign in credentials do not match existing user. Please try again or register if you do not already have an account.</string>
    <string name="email_required">Email Required</string>
    <string name="password_required">Password Required</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vendor_menu">Vendor Menu</string>
    <string name="cvv">CVV</string>
    <string name="create_bill">Create Bill</string>
    <string name="edit_menu">Edit Menu</string>
    <string name="transaction_history">Transaction History</string>
    <string name="edit_name">Edit Name</string>
    <string name="daily_totals">Daily Totals</string>
    <string name="edit_vendor_information">Edit Vendor Information</string>
    <string name="cancel">Cancel</string>
    <string name="friends">Friends (Beta)</string>
    <string name="search">Search</string>
    <string name="results">Results</string>

</resources>
