<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navi_scan"
            android:icon="@drawable/ic_scanner_background"
            android:title="Scanner" />
        <item
            android:id="@+id/navi_past_payments"
            android:icon="@android:drawable/ic_menu_revert"
            android:title="Past Payments" />
        <item
            android:id="@+id/navi_vendor"
            android:icon="@drawable/ic_baseline_vendor"
            android:title="Vendor" />
        <item
            android:id="@+id/navi_setting"
            android:icon="@drawable/ic_settings_background"
            android:title="Settings" />
        <item
            android:id="@+id/navi_exit"
            android:icon="@drawable/ic_baseline_exit"
            android:title="Logout" />
    </group>
</menu>